fix expertise/services section dark mode

--- a/style.css
+++ b/style.css
@@ -899,7 +899,11 @@ button {
   border-radius: 1.125rem;
   overflow: hidden;
   opacity: 0;
-  transition: all 1s cubic-bezier(0.16, 1, 0.3, 1);
+  transition: all 1s cubic-bezier(0.16, 1, 0.3, 1), background-color 0.4s linear;
+}
+
+.services-text.dark {
+  background-color: var(--bg-night2);
 }
 
 .services-text > div {
